--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "co-mocha": "*",
+    "git-contributor": "1",
     "jshint": "*",
     "mocha": "*",
     "nyc": "^12.0.2",
@@ -25,7 +26,8 @@
   },
   "scripts": {
     "test": "nyc --reporter=lcov --reporter=text mocha",
-    "lint": "jshint ."
+    "lint": "jshint .",
+    "contributor": "git-contributor"
   },
   "pre-commit": [
     "lint"
